projects/compiler/test/typechecker/match/error_duplicate_literal.out
Error at %FILE_NAME%:5:3
Duplicate match case
  |    123 => {}
       ^
